finition du test NewBill, ajout du test d'integration POST, ajout du message d'erreur sur l'input file du formulaire d'envoi d'un newbill

--- a/src/css/newbill.css
+++ b/src/css/newbill.css
@@ -37,6 +37,15 @@ label {
   color: #fff;
 }
 
+.input-file-error{
+  display: none;
+  color: red;
+}
+
+.input-file-error.active{
+  display: block;
+}
+
 #btn-send-bill {
   width: 100px;
   background-color: #0E5AE5;
